--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-flask
-flask-cors
-requests
-python-dotenv
-transformers
-torch
-gunicorn
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+flask==3.0.3
+flask-cors==4.0.1
+gunicorn==23.0.0
+python-dotenv==1.0.1
+requests==2.32.3
+
+transformers==4.44.2
+huggingface-hub==0.24.5
+safetensors==0.4.3
+torch==2.4.1
